deploy/040-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    deployment: nodejs-mqtt-integration-example
  name: nodejs-mqtt-integration-example
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nodejs-mqtt-integration-example
